[gd_scene load_steps=9 format=3 uid="uid://uj43l33ax3vm"]

[ext_resource type="Script" path="res://Script/main_scene.gd" id="1_tbe1w"]
[ext_resource type="PackedScene" uid="uid://b0g1wn8waka8v" path="res://Asset/Gameplay/planet.tscn" id="2_ah4tx"]
[ext_resource type="PackedScene" uid="uid://dmps6f51enln7" path="res://Asset/ground.tscn" id="3_ir4n7"]
[ext_resource type="PackedScene" uid="uid://bhgf0c1v04wgr" path="res://Asset/stars_emitter.tscn" id="4_8eolo"]
[ext_resource type="PackedScene" uid="uid://fhtirnvwowsx" path="res://Scene/ui_level.tscn" id="5_7itxn"]
[ext_resource type="PackedScene" uid="uid://cg5juldybpdc4" path="res://Scene/inventory.tscn" id="6_i48no"]
[ext_resource type="Script" path="res://Script/GamingZone.gd" id="7_qpoio"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0jfd"]
size = Vector2(1920, 1080)

[node name="Current_level" type="Node2D"]
script = ExtResource("1_tbe1w")
planet_scene = ExtResource("2_ah4tx")

[node name="Ground" parent="." instance=ExtResource("3_ir4n7")]

[node name="StarsEmitter" parent="." instance=ExtResource("4_8eolo")]
position = Vector2(1030, 605)

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Ui_level" parent="." instance=ExtResource("5_7itxn")]
z_index = 1

[node name="Inventory" parent="." instance=ExtResource("6_i48no")]

[node name="GamingZone" type="Area2D" parent="."]
position = Vector2(859, 375)
gravity_space_override = 3
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
linear_damp = 0.0
script = ExtResource("7_qpoio")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GamingZone"]
position = Vector2(101, 165)
shape = SubResource("RectangleShape2D_h0jfd")

[connection signal="slot_1_pressed" from="Ui_level" to="." method="_on_ui_level_slot_1_pressed"]
[connection signal="slot_2_pressed" from="Ui_level" to="." method="_on_ui_level_slot_2_pressed"]
[connection signal="body_exited" from="GamingZone" to="." method="_on_gaming_zone_body_exited"]
[connection signal="mouse_entered" from="GamingZone" to="GamingZone" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="GamingZone" to="GamingZone" method="_on_mouse_exited"]
[connection signal="player_click_in_gaming_zone" from="GamingZone" to="." method="_on_gaming_zone_player_click_in_gaming_zone"]
